# CrawlClima

./: .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  env.tpl  pyproject.toml
.github/workflows/: linux.yml
containers/: Dockerfile  Dockerfile-crawlclima  docker-compose.yaml
containers/scripts/: healthcheck.sh  start_celery_beat.sh
crawlclima/: celeryapp.py  tasks.py
crawlclima/captura/: tweets.py
crawlclima/celery/: celeryapp.py  celeryconfig.py  tasks.py
crawlclima/config/: __init__.py  celeryconfig.py  dbconnections.py
crawlclima/redemet/: models.py  rmet.py
crawlclima/redmet/: rmet.py
crawlclima/tweets/: tweets.py
crawlclima/utils/: models.py  rmet.py
tests/unit/: test_rmet.py  test_tasks.py  test_tweets.py
